Updated Ques_1.ipynb for evaluation

--- a/src/Module 2/Ques_1.ipynb
+++ b/src/Module 2/Ques_1.ipynb
@@ -2,9 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3 entries, 0 to 2\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   Name    3 non-null      object\n",
+      " 1   Age     3 non-null      int64 \n",
+      " 2   Salary  3 non-null      int64 \n",
+      "dtypes: int64(2), object(1)\n",
+      "memory usage: 200.0+ bytes\n"
+     ]
+    }
+   ],
    "source": [
     "# Getting Started with Pandas\n",
     "# Objective: Introduce students to using Pandas for data analysis by loading data into Pandas\n",
@@ -14,13 +31,22 @@
     "# 1. Open your Jupyter Notebook or a Python environment.\n",
     "# 2. Import the pandas library.\n",
     "# 3. Load a CSV file into a DataFrame.\n",
+    "import pandas as pd \n",
+    "data = {\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie'],\n",
+    "    'Age': [25, 30, 35],\n",
+    "    'Salary': [50000, 60000, 70000]\n",
+    "}\n",
+    "df=pd.DataFrame(data)\n",
+    "df.head()\n",
+    "df.info()\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "# Question 2: Displaying the First Few Rows\n",
     "# 4. Use the head() method to display the first five rows of the DataFrame.\n",
-    "\n",
+    "   \n",
     "\n",
     "\n",
     "\n",
@@ -30,33 +56,66 @@
     "\n",
     "\n",
     "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name      object\n",
+      "Age        int64\n",
+      "Salary     int64\n",
+      "dtype: object\n",
+      "0    25\n",
+      "1    30\n",
+      "2    35\n",
+      "Name: Age, dtype: int64\n",
+      "      Name  Age  Salary\n",
+      "1      Bob   30   60000\n",
+      "2  Charlie   35   70000\n"
+     ]
+    }
+   ],
    "source": [
     "# Data Inspection & Selection\n",
     "# Objective: Learn how to inspect data and select specific data points.\n",
     "\n",
     "# Question 1: Inspecting Column Data Types\n",
     "# 6. Use the dtypes attribute to inspect the data types of each column.\n",
+    "import pandas as pd \n",
+    "data = {\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie'],\n",
+    "    'Age': [25, 30, 35],\n",
+    "    'Salary': [50000, 60000, 70000]\n",
+    "}\n",
+    "df=pd.DataFrame(data)\n",
+    "print(df.dtypes)\n",
+    "ac = df['Age']\n",
+    "print(ac)\n",
+    "sr = df[1:3]\n",
+    "print(sr)\n",
+    "\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "# Question 2: Selecting Columns\n",
     "# 7. Select a single column from the DataFrame.\n",
-    "\n",
+    "   \n",
     "\n",
     "\n",
     "\n",
     "\n",
     "# Question 3: Slicing Rows\n",
     "# 8. Select specific rows using slicing.\n",
+    " \n",
     "\n",
     "\n",
     "\n",
@@ -65,9 +124,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Name   Age         City\n",
+      "0    Alice  25.0     New York\n",
+      "1      Bob   0.0  Los Angeles\n",
+      "2  Charlie  30.0      Chicago\n",
+      "3    David   0.0      Unknown\n",
+      "  Full Name  Age (years) City of Residence\n",
+      "0     Alice         25.0          New York\n",
+      "1       Bob          0.0       Los Angeles\n",
+      "2   Charlie         30.0           Chicago\n",
+      "3     David          0.0           Unknown\n",
+      "  Full Name  Age (years) City of Residence\n",
+      "0     Alice         25.0          New York\n",
+      "1       Bob          0.0       Los Angeles\n",
+      "2   Charlie         30.0           Chicago\n",
+      "3     David          0.0           Unknown\n"
+     ]
+    }
+   ],
    "source": [
     "# Data Cleaning & Manipulation\n",
     "# Objective: Practice cleaning data and manipulating DataFrames.\n",
@@ -78,6 +159,34 @@
     "\n",
     "\n",
     "\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "data = {'Name': ['Alice', 'Bob', 'Charlie', 'David'],\n",
+    "        'Age': [25, None, 30, None],\n",
+    "        'City': ['New York', 'Los Angeles', 'Chicago', None]}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "\n",
+    "df['Age'] = df['Age'].fillna(0)  \n",
+    "df['City'] = df['City'].fillna('Unknown')  \n",
+    "\n",
+    "print(df)\n",
+    "\n",
+    "\n",
+    "\n",
+    "df = df.rename(columns={'Name': 'Full Name', 'Age': 'Age (years)', 'City': 'City of Residence'})\n",
+    "\n",
+    "print(df)\n",
+    "\n",
+    "\n",
+    "df = pd.concat([df, df], ignore_index=True)\n",
+    "\n",
+    "\n",
+    "df = df.drop_duplicates()\n",
+    "\n",
+    "print(df)\n",
     "# QUestion 2: Renaming Columns\n",
     "# 10. Change the names of specific columns using rename().\n",
     "\n",
@@ -95,15 +204,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Value\n",
+      "Category       \n",
+      "A          30.0\n",
+      "B          30.0\n",
+      "         Value        \n",
+      "          mean sum max\n",
+      "Category              \n",
+      "A         30.0  90  50\n",
+      "B         30.0  60  40\n"
+     ]
+    }
+   ],
    "source": [
     "# Data Aggregation & Exporting\n",
     "# Objective: Aggregate data and export the results.\n",
     "\n",
     "# Question 1: Grouping and Aggregating Data\n",
     "# 12. Group data by a specific column and calculate the mean for each group.\n",
+    "import pandas as pd \n",
+    "df = pd.DataFrame({\n",
+    "    'Category': ['A', 'B', 'A', 'B', 'A'],'Value':[10,20,30,40,50]\n",
+    "})\n",
+    "grouped_mean = df.groupby('Category').mean()\n",
+    "print(grouped_mean)\n",
+    "grouped_mean.to_csv('grouped_mean.csv',index = True)\n",
+    "grouped_multi = df.groupby('Category').agg({'Value':['mean','sum','max']})\n",
+    "print(grouped_multi)\n",
     "\n",
     "\n",
     "\n",
@@ -126,8 +260,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
