--- a/src/Module 2/Data Visualization with Matplotlib and Seaborn/Ques_1.ipynb
+++ b/src/Module 2/Data Visualization with Matplotlib and Seaborn/Ques_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -17,21 +17,22 @@
     }
    ],
    "source": [
-    "# Creating a Simple Bar Plot with Matplotlib\n",
-    "# Description: Create a bar plot using Matplotlib to visualize the number of sales (in thousands) for a set of\n",
-    "# products: 'A', 'B', 'C', 'D', and 'E' with values [23, 75, 57, 90, 65].\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "products = ['A', 'B', 'C', 'D', 'E']\n",
     "sales = [23, 75, 57, 90, 65]\n",
     "\n",
+    "# Data validation\n",
+    "if not all(isinstance(x, (int, float)) and x >= 0 for x in sales):\n",
+    "    raise ValueError(\"All sales values must be non-negative numbers.\")\n",
+    "if len(products) != len(sales):\n",
+    "    raise ValueError(\"Length of products and sales must match.\")\n",
+    "\n",
     "plt.bar(products, sales, color='skyblue')\n",
     "plt.title('Product Sales')\n",
     "plt.xlabel('Products')\n",
     "plt.ylabel('Sales (in thousands)')\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()\n"
    ]
   }
  ],
