Updated Ques_1.ipynb in Data Visualization module

--- a/src/Module 2/Data Visualization with Matplotlib and Seaborn/Ques_1.ipynb
+++ b/src/Module 2/Data Visualization with Matplotlib and Seaborn/Ques_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -18,17 +18,25 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
     "products = ['A', 'B', 'C', 'D', 'E']\n",
     "sales = [23, 75, 57, 90, 65]\n",
     "\n",
-    "# Data validation\n",
-    "if not all(isinstance(x, (int, float)) and x >= 0 for x in sales):\n",
-    "    raise ValueError(\"All sales values must be non-negative numbers.\")\n",
-    "if len(products) != len(sales):\n",
-    "    raise ValueError(\"Length of products and sales must match.\")\n",
+    "# Convert to NumPy array for efficient checks\n",
+    "sales_array = np.array(sales)\n",
     "\n",
-    "plt.bar(products, sales, color='skyblue')\n",
+    "# Validation checks\n",
+    "if not isinstance(sales_array, np.ndarray) or not np.issubdtype(sales_array.dtype, np.number):\n",
+    "    raise ValueError(\"Sales data must be numeric.\")\n",
+    "\n",
+    "if np.any(sales_array < 0):\n",
+    "    raise ValueError(\"Sales data contains negative values, which is not allowed.\")\n",
+    "\n",
+    "if len(products) != len(sales):\n",
+    "    raise ValueError(f\"Mismatch in lengths: {len(products)} products vs {len(sales)} sales entries.\")\n",
+    "\n",
+    "plt.bar(products, sales_array, color='skyblue')\n",
     "plt.title('Product Sales')\n",
     "plt.xlabel('Products')\n",
     "plt.ylabel('Sales (in thousands)')\n",
