Updated Ques_2 and Ques_4 in Data Visualization module

--- a/src/Module 2/Data Visualization with Matplotlib and Seaborn/Ques_4.ipynb
+++ b/src/Module 2/Data Visualization with Matplotlib and Seaborn/Ques_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -17,24 +17,27 @@
     }
    ],
    "source": [
-    "# Basic Seaborn Bar Plot\n",
-    "# Description: Using Seaborn, plot the same bar plot from Question 1 to compare the sales data.\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "\n",
     "# Data\n",
     "products = ['A', 'B', 'C', 'D', 'E']\n",
     "sales = [23, 75, 57, 90, 65]\n",
     "\n",
-    "# Create a DataFrame for Seaborn\n",
-    "import pandas as pd\n",
+    "# Create a DataFrame with category dtype for the Product column (improves memory usage)\n",
     "data = pd.DataFrame({'Product': products, 'Sales': sales})\n",
+    "data['Product'] = data['Product'].astype('category')\n",
     "\n",
     "# Plotting using Seaborn\n",
+    "plt.figure(figsize=(8, 6))\n",
     "sns.barplot(x='Product', y='Sales', data=data, color='skyblue')\n",
-    "plt.title('Product Sales Comparison')\n",
-    "plt.xlabel('Products')\n",
-    "plt.ylabel('Sales (in thousands)')\n",
+    "plt.title('Product Sales Comparison', fontsize=16)\n",
+    "plt.xlabel('Products', fontsize=12)\n",
+    "plt.ylabel('Sales (in thousands)', fontsize=12)\n",
+    "\n",
+    "# Adding a legend (though it's not strictly necessary for this plot)\n",
+    "plt.legend(['Sales'], loc='upper right')\n",
     "plt.show()\n"
    ]
   }
