Updated Ques_14.ipynb in Data Visualization module

--- a/src/Module 2/Data Visualization with Matplotlib and Seaborn/Ques_14.ipynb
+++ b/src/Module 2/Data Visualization with Matplotlib and Seaborn/Ques_14.ipynb
@@ -17,25 +17,37 @@
     }
    ],
    "source": [
-    "# Styling with Matplotlib - Line Plot\n",
-    "# Objective: Create a line plot with customized styles using Matplotlib.\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Sample data\n",
     "x = [1, 2, 3, 4, 5]\n",
     "y = [10, 15, 13, 18, 16]\n",
     "\n",
-    "# Create line plot with customized styles\n",
-    "plt.figure(figsize=(8, 5))\n",
-    "plt.plot(x, y, color='teal', linestyle='--', linewidth=2, marker='o', markersize=8)\n",
+    "# Input validation\n",
+    "try:\n",
+    "    if not x or not y or len(x) != len(y):\n",
+    "        raise ValueError(\"Input lists must be non-empty and of the same length.\")\n",
+    "    if not all(isinstance(i, (int, float)) for i in x + y):\n",
+    "        raise TypeError(\"All input values must be numeric.\")\n",
+    "    \n",
+    "    # Create line plot with customized styles\n",
+    "    plt.figure(figsize=(8, 5))\n",
+    "    plt.plot(x, y, color='teal', linestyle='--', linewidth=2, marker='o', markersize=8)\n",
     "\n",
-    "# Add labels and title\n",
-    "plt.title(\"Styled Line Plot Example\", fontsize=16, fontweight='bold')\n",
-    "plt.xlabel(\"X-axis\", fontsize=12)\n",
-    "plt.ylabel(\"Y-axis\", fontsize=12)\n",
-    "plt.grid(True, linestyle=':', linewidth=0.7)\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n"
+    "    # Add labels and title\n",
+    "    plt.title(\"Styled Line Plot Example\", fontsize=16, fontweight='bold')\n",
+    "    plt.xlabel(\"X-axis\", fontsize=12)\n",
+    "    plt.ylabel(\"Y-axis\", fontsize=12)\n",
+    "    plt.grid(True, linestyle=':', linewidth=0.7)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "except ValueError as ve:\n",
+    "    print(f\"ValueError: {ve}\")\n",
+    "except TypeError as te:\n",
+    "    print(f\"TypeError: {te}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\")\n"
    ]
   }
  ],
