--- a/src/Module 2/Hands-on Project: EDA on a Dataset using NumPy, Pandas, Matplotlib & Seaborn/Ques_1.ipynb
+++ b/src/Module 2/Hands-on Project: EDA on a Dataset using NumPy, Pandas, Matplotlib & Seaborn/Ques_1.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First 5 rows:\n",
-      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+      "Head of dataset:\n",
+      "    sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
       "0                5.1               3.5                1.4               0.2   \n",
       "1                4.9               3.0                1.4               0.2   \n",
       "2                4.7               3.2                1.3               0.2   \n",
@@ -24,10 +24,9 @@
       "3  setosa  \n",
       "4  setosa  \n",
       "\n",
-      "Shape of dataset:\n",
-      "(150, 5)\n",
+      "Shape: (150, 5)\n",
       "\n",
-      "Data types and null values:\n",
+      "Info:\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 150 entries, 0 to 149\n",
       "Data columns (total 5 columns):\n",
@@ -41,15 +40,17 @@
       "dtypes: category(1), float64(4)\n",
       "memory usage: 5.1 KB\n",
       "None\n",
-      "sepal length (cm)    0\n",
+      "\n",
+      "Missing values:\n",
+      " sepal length (cm)    0\n",
       "sepal width (cm)     0\n",
       "petal length (cm)    0\n",
       "petal width (cm)     0\n",
       "species              0\n",
       "dtype: int64\n",
       "\n",
-      "Summary statistics:\n",
-      "       sepal length (cm)  sepal width (cm)  petal length (cm)  \\\n",
+      "Summary:\n",
+      "        sepal length (cm)  sepal width (cm)  petal length (cm)  \\\n",
       "count         150.000000        150.000000         150.000000   \n",
       "mean            5.843333          3.057333           3.758000   \n",
       "std             0.828066          0.435866           1.765298   \n",
@@ -69,15 +70,6 @@
       "75%            1.800000  \n",
       "max            2.500000  \n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1000x800 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "data": {
@@ -121,71 +113,76 @@
     }
    ],
    "source": [
-    "# Import required libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.datasets import load_iris\n",
     "\n",
-    "# Function to load and validate the dataset\n",
+    "# Load and validate Iris dataset with specific error handling\n",
     "def load_iris_data():\n",
     "    try:\n",
     "        iris = load_iris()\n",
+    "        if not iris or not iris.data.any():\n",
+    "            raise ValueError(\"Iris dataset is empty or corrupt.\")\n",
+    "        \n",
     "        df = pd.DataFrame(data=iris.data, columns=iris.feature_names)\n",
     "        df['species'] = pd.Categorical.from_codes(iris.target, iris.target_names)\n",
-    "\n",
-    "        if df.empty:\n",
-    "            raise ValueError(\"Dataset is empty.\")\n",
-    "        \n",
     "        return df\n",
+    "\n",
+    "    except ValueError as ve:\n",
+    "        print(f\"ValueError: {ve}\")\n",
+    "    except KeyError as ke:\n",
+    "        print(f\"KeyError: {ke}\")\n",
     "    except Exception as e:\n",
-    "        print(f\"Error loading dataset: {e}\")\n",
-    "        return pd.DataFrame()\n",
+    "        print(f\"Unexpected error: {type(e).__name__} - {e}\")\n",
+    "    \n",
+    "    return pd.DataFrame()\n",
     "\n",
-    "# Load data\n",
-    "df = load_iris_data()\n",
-    "\n",
-    "# Function to display basic information\n",
+    "# Explore the dataset\n",
     "def explore_data(df):\n",
-    "    print(\"First 5 rows:\")\n",
-    "    print(df.head())\n",
-    "\n",
-    "    print(\"\\nShape of dataset:\")\n",
-    "    print(df.shape)\n",
-    "\n",
-    "    print(\"\\nData types and null values:\")\n",
+    "    print(\"Head of dataset:\\n\", df.head())\n",
+    "    print(\"\\nShape:\", df.shape)\n",
+    "    print(\"\\nInfo:\")\n",
     "    print(df.info())\n",
-    "    print(df.isnull().sum())\n",
+    "    print(\"\\nMissing values:\\n\", df.isnull().sum())\n",
+    "    print(\"\\nSummary:\\n\", df.describe())\n",
     "\n",
-    "    print(\"\\nSummary statistics:\")\n",
-    "    print(df.describe())\n",
-    "\n",
-    "# Function for visualizations\n",
-    "def plot_data(df):\n",
-    "    plt.figure(figsize=(10, 8))\n",
-    "    df.hist(edgecolor='black', figsize=(10, 8))\n",
+    "# Plotting functions (modularized)\n",
+    "def plot_histogram(df):\n",
+    "    df.drop(columns='species').hist(figsize=(10, 8), edgecolor='black')\n",
     "    plt.suptitle(\"Histogram of Features\")\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
+    "def plot_pairplot(df):\n",
     "    sns.pairplot(df, hue='species')\n",
     "    plt.suptitle(\"Pairplot of Iris Dataset\", y=1.02)\n",
     "    plt.show()\n",
     "\n",
+    "def plot_boxplot(df):\n",
     "    plt.figure(figsize=(10, 6))\n",
-    "    sns.boxplot(data=df.drop('species', axis=1), orient=\"h\")\n",
+    "    sns.boxplot(data=df.drop('species', axis=1), orient='h')\n",
     "    plt.title(\"Boxplot of Features\")\n",
     "    plt.show()\n",
     "\n",
+    "def plot_heatmap(df):\n",
     "    plt.figure(figsize=(8, 6))\n",
     "    sns.heatmap(df.drop('species', axis=1).corr(), annot=True, cmap='coolwarm')\n",
     "    plt.title(\"Correlation Heatmap\")\n",
     "    plt.show()\n",
     "\n",
-    "# Call functions\n",
-    "explore_data(df)\n",
-    "plot_data(df)\n"
+    "# Main execution\n",
+    "df = load_iris_data()\n",
+    "\n",
+    "if not df.empty:\n",
+    "    explore_data(df)\n",
+    "    plot_histogram(df)\n",
+    "    plot_pairplot(df)\n",
+    "    plot_boxplot(df)\n",
+    "    plot_heatmap(df)\n",
+    "else:\n",
+    "    print(\"Dataset loading failed.\")\n"
    ]
   }
  ],
