--- a/src/Module 2/Hands-on Project: EDA on a Dataset using NumPy, Pandas, Matplotlib & Seaborn/Ques_2.ipynb
+++ b/src/Module 2/Hands-on Project: EDA on a Dataset using NumPy, Pandas, Matplotlib & Seaborn/Ques_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -39,8 +39,6 @@
     }
    ],
    "source": [
-    "# Title: Basic NumPy Operations\n",
-    "# Description: Perform basic operations such as calculating the mean of the dataset.\n",
     "# Import required libraries\n",
     "import numpy as np\n",
     "from sklearn.datasets import load_iris\n",
@@ -78,8 +76,7 @@
     "\n",
     "print(\"\\nMin and Max of each feature:\")\n",
     "for name, min_v, max_v in zip(feature_names, min_values, max_values):\n",
-    "    print(f\"{name}: Min = {min_v:.2f}, Max = {max_v:.2f}\")\n",
-    "\n"
+    "    print(f\"{name}: Min = {min_v:.2f}, Max = {max_v:.2f}\")\n"
    ]
   }
  ],
