Updated Ques_3.ipynb for evaluation

--- a/src/Module 2/Hands-on Project: EDA on a Dataset using NumPy, Pandas, Matplotlib & Seaborn/Ques_3.ipynb
+++ b/src/Module 2/Hands-on Project: EDA on a Dataset using NumPy, Pandas, Matplotlib & Seaborn/Ques_3.ipynb
@@ -2,18 +2,80 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original dataset:\n",
+      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+      "0                5.1               3.5                1.4               0.2   \n",
+      "1                4.9               3.0                1.4               0.2   \n",
+      "2                4.7               3.2                1.3               0.2   \n",
+      "3                4.6               3.1                1.5               0.2   \n",
+      "4                5.0               3.6                1.4               0.2   \n",
+      "\n",
+      "  species  \n",
+      "0  setosa  \n",
+      "1  setosa  \n",
+      "2  setosa  \n",
+      "3  setosa  \n",
+      "4  setosa  \n",
+      "\n",
+      "Updated dataset with new ratio column:\n",
+      "   petal length (cm)  petal width (cm)  petal length to width ratio\n",
+      "0                1.4               0.2                          7.0\n",
+      "1                1.4               0.2                          7.0\n",
+      "2                1.3               0.2                          6.5\n",
+      "3                1.5               0.2                          7.5\n",
+      "4                1.4               0.2                          7.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Title: Data Manipulation with Pandas\n",
-    "# Description: Add a new column that calculates the ratio of petal length to petal width."
+    "# Description: Add a new column that calculates the ratio of petal length to petal width.\n",
+    "# Import required libraries\n",
+    "import pandas as pd\n",
+    "from sklearn.datasets import load_iris\n",
+    "\n",
+    "# Load the Iris dataset\n",
+    "iris = load_iris()\n",
+    "df = pd.DataFrame(data=iris.data, columns=iris.feature_names)\n",
+    "df['species'] = pd.Categorical.from_codes(iris.target, iris.target_names)\n",
+    "\n",
+    "# Display the first few rows\n",
+    "print(\"Original dataset:\")\n",
+    "print(df.head())\n",
+    "\n",
+    "# Add new column: Ratio of petal length to petal width\n",
+    "df['petal length to width ratio'] = df['petal length (cm)'] / df['petal width (cm)']\n",
+    "\n",
+    "# Display updated dataframe\n",
+    "print(\"\\nUpdated dataset with new ratio column:\")\n",
+    "print(df[['petal length (cm)', 'petal width (cm)', 'petal length to width ratio']].head())\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
