Updated Ques_5.ipynb for evaluation

--- a/src/Module 2/Hands-on Project: EDA on a Dataset using NumPy, Pandas, Matplotlib & Seaborn/Ques_5.ipynb
+++ b/src/Module 2/Hands-on Project: EDA on a Dataset using NumPy, Pandas, Matplotlib & Seaborn/Ques_5.ipynb
@@ -2,18 +2,81 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values before imputation:\n",
+      "sepal length (cm)    5\n",
+      "sepal width (cm)     0\n",
+      "petal length (cm)    0\n",
+      "petal width (cm)     0\n",
+      "species              0\n",
+      "dtype: int64\n",
+      "\n",
+      "Missing values after imputation:\n",
+      "sepal length (cm)    0\n",
+      "sepal width (cm)     0\n",
+      "petal length (cm)    0\n",
+      "petal width (cm)     0\n",
+      "species              0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# Title: Data Cleaning using Pandas\n",
-    "# Description: Check for missing values and handle them by imputing the median."
+    "# Description: Check for missing values and handle them by imputing the median.\n",
+    "# Import necessary libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.datasets import load_iris\n",
+    "\n",
+    "# Load the Iris dataset\n",
+    "iris = load_iris()\n",
+    "df = pd.DataFrame(data=iris.data, columns=iris.feature_names)\n",
+    "df['species'] = pd.Categorical.from_codes(iris.target, iris.target_names)\n",
+    "\n",
+    "# Simulate missing values for demonstration (optional for real datasets)\n",
+    "# Example: set 5 random values in 'sepal length (cm)' to NaN\n",
+    "np.random.seed(42)\n",
+    "missing_indices = np.random.choice(df.index, size=5, replace=False)\n",
+    "df.loc[missing_indices, 'sepal length (cm)'] = np.nan\n",
+    "\n",
+    "# Display missing value count\n",
+    "print(\"Missing values before imputation:\")\n",
+    "print(df.isnull().sum())\n",
+    "\n",
+    "# Impute missing values with median (only numeric columns)\n",
+    "numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
+    "df[numeric_cols] = df[numeric_cols].fillna(df[numeric_cols].median())\n",
+    "\n",
+    "# Confirm missing values handled\n",
+    "print(\"\\nMissing values after imputation:\")\n",
+    "print(df.isnull().sum())\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
