--- a/src/Module 2/Ques_1.ipynb
+++ b/src/Module 2/Ques_1.ipynb
@@ -2,67 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 3 entries, 0 to 2\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column  Non-Null Count  Dtype \n",
-      "---  ------  --------------  ----- \n",
-      " 0   Name    3 non-null      object\n",
-      " 1   Age     3 non-null      int64 \n",
-      " 2   Salary  3 non-null      int64 \n",
-      "dtypes: int64(2), object(1)\n",
-      "memory usage: 200.0+ bytes\n"
+     "ename": "SyntaxError",
+     "evalue": "unexpected character after line continuation character (4052997064.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    git add src/Module\\ 2/Ques_1.ipynb\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected character after line continuation character\n"
      ]
     }
    ],
    "source": [
-    "# Getting Started with Pandas\n",
-    "# Objective: Introduce students to using Pandas for data analysis by loading data into Pandas\n",
-    "# DataFrames.\n",
-    "\n",
-    "# Question 1: Importing Pandas and Loading a CSV File\n",
-    "# 1. Open your Jupyter Notebook or a Python environment.\n",
-    "# 2. Import the pandas library.\n",
-    "# 3. Load a CSV file into a DataFrame.\n",
-    "import pandas as pd \n",
-    "data = {\n",
-    "    'Name': ['Alice', 'Bob', 'Charlie'],\n",
-    "    'Age': [25, 30, 35],\n",
-    "    'Salary': [50000, 60000, 70000]\n",
-    "}\n",
-    "df=pd.DataFrame(data)\n",
-    "df.head()\n",
-    "df.info()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Question 2: Displaying the First Few Rows\n",
-    "# 4. Use the head() method to display the first five rows of the DataFrame.\n",
-    "   \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Question 3: Basic Data Information\n",
-    "# 5. Use the info() method to get a concise summary of the DataFrame.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "git add src/Module\\ 2/Ques_1.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
