Updated Ques_1.ipynb for evaluation

--- a/src/Module 2/Ques_1.ipynb
+++ b/src/Module 2/Ques_1.ipynb
@@ -2,218 +2,151 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected character after line continuation character (4052997064.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    git add src/Module\\ 2/Ques_1.ipynb\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected character after line continuation character\n"
-     ]
-    }
-   ],
-   "source": [
-    "git add src/Module\\ 2/Ques_1.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name      object\n",
-      "Age        int64\n",
-      "Salary     int64\n",
+      "First few rows of the Iris dataset:\n",
+      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+      "0                5.1               3.5                1.4               0.2   \n",
+      "1                4.9               3.0                1.4               0.2   \n",
+      "2                4.7               3.2                1.3               0.2   \n",
+      "3                4.6               3.1                1.5               0.2   \n",
+      "4                5.0               3.6                1.4               0.2   \n",
+      "\n",
+      "  species  \n",
+      "0  setosa  \n",
+      "1  setosa  \n",
+      "2  setosa  \n",
+      "3  setosa  \n",
+      "4  setosa  \n",
+      "\n",
+      "Dataset Summary:\n",
+      "       sepal length (cm)  sepal width (cm)  petal length (cm)  \\\n",
+      "count         150.000000        150.000000         150.000000   \n",
+      "mean            5.843333          3.057333           3.758000   \n",
+      "std             0.828066          0.435866           1.765298   \n",
+      "min             4.300000          2.000000           1.000000   \n",
+      "25%             5.100000          2.800000           1.600000   \n",
+      "50%             5.800000          3.000000           4.350000   \n",
+      "75%             6.400000          3.300000           5.100000   \n",
+      "max             7.900000          4.400000           6.900000   \n",
+      "\n",
+      "       petal width (cm)  \n",
+      "count        150.000000  \n",
+      "mean           1.199333  \n",
+      "std            0.762238  \n",
+      "min            0.100000  \n",
+      "25%            0.300000  \n",
+      "50%            1.300000  \n",
+      "75%            1.800000  \n",
+      "max            2.500000  \n",
+      "\n",
+      "Missing values in the dataset:\n",
+      "sepal length (cm)    0\n",
+      "sepal width (cm)     0\n",
+      "petal length (cm)    0\n",
+      "petal width (cm)     0\n",
+      "species              0\n",
+      "dtype: int64\n",
+      "\n",
+      "Data types of the columns:\n",
+      "sepal length (cm)     float64\n",
+      "sepal width (cm)      float64\n",
+      "petal length (cm)     float64\n",
+      "petal width (cm)      float64\n",
+      "species              category\n",
       "dtype: object\n",
-      "0    25\n",
-      "1    30\n",
-      "2    35\n",
-      "Name: Age, dtype: int64\n",
-      "      Name  Age  Salary\n",
-      "1      Bob   30   60000\n",
-      "2  Charlie   35   70000\n"
+      "\n",
+      "First few rows after adding the new column 'petal_to_sepal_ratio':\n",
+      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+      "0                5.1               3.5                1.4               0.2   \n",
+      "1                4.9               3.0                1.4               0.2   \n",
+      "2                4.7               3.2                1.3               0.2   \n",
+      "3                4.6               3.1                1.5               0.2   \n",
+      "4                5.0               3.6                1.4               0.2   \n",
+      "\n",
+      "  species  petal_to_sepal_ratio  \n",
+      "0  setosa              0.274510  \n",
+      "1  setosa              0.285714  \n",
+      "2  setosa              0.276596  \n",
+      "3  setosa              0.326087  \n",
+      "4  setosa              0.280000  \n",
+      "\n",
+      "Unique species in the dataset:\n",
+      "['setosa', 'versicolor', 'virginica']\n",
+      "Categories (3, object): ['setosa', 'versicolor', 'virginica']\n",
+      "\n",
+      "Average of each feature grouped by species:\n",
+      "            sepal length (cm)  sepal width (cm)  petal length (cm)  \\\n",
+      "species                                                              \n",
+      "setosa                  5.006             3.428              1.462   \n",
+      "versicolor              5.936             2.770              4.260   \n",
+      "virginica               6.588             2.974              5.552   \n",
+      "\n",
+      "            petal width (cm)  petal_to_sepal_ratio  \n",
+      "species                                             \n",
+      "setosa                 0.246              0.292756  \n",
+      "versicolor             1.326              0.717729  \n",
+      "virginica              2.026              0.843749  \n"
      ]
-    }
-   ],
-   "source": [
-    "# Data Inspection & Selection\n",
-    "# Objective: Learn how to inspect data and select specific data points.\n",
-    "\n",
-    "# Question 1: Inspecting Column Data Types\n",
-    "# 6. Use the dtypes attribute to inspect the data types of each column.\n",
-    "import pandas as pd \n",
-    "data = {\n",
-    "    'Name': ['Alice', 'Bob', 'Charlie'],\n",
-    "    'Age': [25, 30, 35],\n",
-    "    'Salary': [50000, 60000, 70000]\n",
-    "}\n",
-    "df=pd.DataFrame(data)\n",
-    "print(df.dtypes)\n",
-    "ac = df['Age']\n",
-    "print(ac)\n",
-    "sr = df[1:3]\n",
-    "print(sr)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Question 2: Selecting Columns\n",
-    "# 7. Select a single column from the DataFrame.\n",
-    "   \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Question 3: Slicing Rows\n",
-    "# 8. Select specific rows using slicing.\n",
-    " \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "      Name   Age         City\n",
-      "0    Alice  25.0     New York\n",
-      "1      Bob   0.0  Los Angeles\n",
-      "2  Charlie  30.0      Chicago\n",
-      "3    David   0.0      Unknown\n",
-      "  Full Name  Age (years) City of Residence\n",
-      "0     Alice         25.0          New York\n",
-      "1       Bob          0.0       Los Angeles\n",
-      "2   Charlie         30.0           Chicago\n",
-      "3     David          0.0           Unknown\n",
-      "  Full Name  Age (years) City of Residence\n",
-      "0     Alice         25.0          New York\n",
-      "1       Bob          0.0       Los Angeles\n",
-      "2   Charlie         30.0           Chicago\n",
-      "3     David          0.0           Unknown\n"
+      "/tmp/ipykernel_2543/3307169607.py:41: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "  grouped_df = df.groupby('species').mean()\n"
      ]
     }
    ],
    "source": [
-    "# Data Cleaning & Manipulation\n",
-    "# Objective: Practice cleaning data and manipulating DataFrames.\n",
-    "\n",
-    "# Question 1: Handling Missing Values\n",
-    "# 9. Use the fillna() method to fill missing values with a specific value.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "# Import the necessary libraries\n",
     "import pandas as pd\n",
+    "from sklearn.datasets import load_iris\n",
     "\n",
-    "data = {'Name': ['Alice', 'Bob', 'Charlie', 'David'],\n",
-    "        'Age': [25, None, 30, None],\n",
-    "        'City': ['New York', 'Los Angeles', 'Chicago', None]}\n",
+    "# Step 1: Load the Iris dataset\n",
+    "iris = load_iris()\n",
+    "df = pd.DataFrame(data=iris.data, columns=iris.feature_names)\n",
     "\n",
-    "df = pd.DataFrame(data)\n",
+    "# Step 2: Add the target (species) column to the DataFrame\n",
+    "df['species'] = pd.Categorical.from_codes(iris.target, iris.target_names)\n",
     "\n",
+    "# Step 3: Display the first few rows of the dataset\n",
+    "print(\"First few rows of the Iris dataset:\")\n",
+    "print(df.head())\n",
     "\n",
-    "df['Age'] = df['Age'].fillna(0)  \n",
-    "df['City'] = df['City'].fillna('Unknown')  \n",
+    "# Step 4: Dataset overview\n",
+    "print(\"\\nDataset Summary:\")\n",
+    "print(df.describe())\n",
     "\n",
-    "print(df)\n",
+    "# Step 5: Check for missing values\n",
+    "print(\"\\nMissing values in the dataset:\")\n",
+    "print(df.isnull().sum())\n",
     "\n",
+    "# Step 6: Display data types of each column\n",
+    "print(\"\\nData types of the columns:\")\n",
+    "print(df.dtypes)\n",
     "\n",
+    "# Step 7: Data Manipulation Example (Adding a new column)\n",
+    "# Add a new column that calculates the ratio of petal length to sepal length\n",
+    "df['petal_to_sepal_ratio'] = df['petal length (cm)'] / df['sepal length (cm)']\n",
     "\n",
-    "df = df.rename(columns={'Name': 'Full Name', 'Age': 'Age (years)', 'City': 'City of Residence'})\n",
+    "# Step 8: Display the first few rows with the new column\n",
+    "print(\"\\nFirst few rows after adding the new column 'petal_to_sepal_ratio':\")\n",
+    "print(df.head())\n",
     "\n",
-    "print(df)\n",
+    "# Step 9: Display unique species in the dataset\n",
+    "print(\"\\nUnique species in the dataset:\")\n",
+    "print(df['species'].unique())\n",
     "\n",
-    "\n",
-    "df = pd.concat([df, df], ignore_index=True)\n",
-    "\n",
-    "\n",
-    "df = df.drop_duplicates()\n",
-    "\n",
-    "print(df)\n",
-    "# QUestion 2: Renaming Columns\n",
-    "# 10. Change the names of specific columns using rename().\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Question 3: Dropping Duplicates\n",
-    "# 11. Remove duplicate rows from the DataFrame.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Value\n",
-      "Category       \n",
-      "A          30.0\n",
-      "B          30.0\n",
-      "         Value        \n",
-      "          mean sum max\n",
-      "Category              \n",
-      "A         30.0  90  50\n",
-      "B         30.0  60  40\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Data Aggregation & Exporting\n",
-    "# Objective: Aggregate data and export the results.\n",
-    "\n",
-    "# Question 1: Grouping and Aggregating Data\n",
-    "# 12. Group data by a specific column and calculate the mean for each group.\n",
-    "import pandas as pd \n",
-    "df = pd.DataFrame({\n",
-    "    'Category': ['A', 'B', 'A', 'B', 'A'],'Value':[10,20,30,40,50]\n",
-    "})\n",
-    "grouped_mean = df.groupby('Category').mean()\n",
-    "print(grouped_mean)\n",
-    "grouped_mean.to_csv('grouped_mean.csv',index = True)\n",
-    "grouped_multi = df.groupby('Category').agg({'Value':['mean','sum','max']})\n",
-    "print(grouped_multi)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Question 2: Exporting Data to CSV\n",
-    "# 13. Export the DataFrame to a new CSV file.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Question 3: Aggregating with Multiple Functions\n",
-    "# 14. Apply several aggregate functions to the grouped data.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "# Step 10: Group the data by species and compute the average of each feature\n",
+    "grouped_df = df.groupby('species').mean()\n",
+    "print(\"\\nAverage of each feature grouped by species:\")\n",
+    "print(grouped_df)\n"
    ]
   }
  ],
